# traffic-simulator

./: .gitignore  CLAUDE.md  ar-improvement.md  last_session.md  review.md  sonar.md
.claude/skills/test-driven-development/: mockito-anti-patterns.md
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml
.planning/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-bootstrap-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-domain-model-road-network-foundation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-REVIEWS.md
.planning/phases/03-physics-engine-idm/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: pom.xml
backend/docs/: osm-converters.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  controls.spec.ts  diagnostics-spacetime.spec.ts  osm-bbox-gh.spec.ts  osm-bbox-o2s.spec.ts  osm-bbox-real-backend.spec.ts  osm-bbox.spec.ts  responsive.spec.ts  simulation.spec.ts  vision-components.spec.ts
frontend/src/: App.tsx  index.css
tools/osm2streets-cli/: Cargo.toml  README.md
tools/osm2streets-cli/src/: main.rs
(+461 files in other folders)
